--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -16,7 +16,7 @@
         {
             "source": "/(.*)",
             "headers": [
-                { "key": "Access-Control-Allow-Origin", "value": "https://learn-ahead-ai.vercel.app" },
+                { "key": "Access-Control-Allow-Origin", "value": "*" },
                 { "key": "Access-Control-Allow-Credentials", "value": "true" },
                 { "key": "Access-Control-Allow-Headers", "value": "Content-Type" }
             ]
